--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "trailingComma": "all",
   "printWidth": 120,
   "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/app.css",
   "overrides": [
     {
       "files": "*.svelte",
