--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
     "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241022.0",
+    "@cloudflare/workers-types": "^4.20241112.0",
     "@fontsource-variable/jetbrains-mono": "^5.1.1",
     "@sveltejs/adapter-cloudflare": "^4.7.4",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "@types/eslint": "^9.6.0",
+    "@sveltejs/kit": "^2.8.1",
+    "@sveltejs/vite-plugin-svelte": "^4.0.1",
+    "@tailwindcss/vite": "4.0.0-beta.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.0.0",
+    "globals": "^15.12.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.7",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "svelte": "^5.1.9",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^3.4.14",
+    "prettier-plugin-svelte": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "svelte": "^5.2.7",
+    "svelte-check": "^4.0.9",
+    "tailwindcss": "4.0.0-beta.1",
     "tailwindcss-spring": "^1.0.1",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.10",
-    "wrangler": "^3.84.1"
+    "typescript-eslint": "^8.15.0",
+    "vite": "5.4.11",
+    "wrangler": "^3.89.0"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.14.2"
 }
