--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
     "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241112.0",
-    "@fontsource-variable/jetbrains-mono": "^5.1.1",
-    "@sveltejs/adapter-cloudflare": "^4.7.4",
-    "@sveltejs/kit": "^2.8.1",
-    "@sveltejs/vite-plugin-svelte": "^4.0.1",
-    "@tailwindcss/vite": "4.0.0-beta.1",
+    "@cloudflare/workers-types": "^4.20250129.0",
+    "@fontsource-variable/jetbrains-mono": "^5.1.2",
+    "@sveltejs/adapter-cloudflare": "^5.0.1",
+    "@sveltejs/kit": "^2.16.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "4.0.3",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.7.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.12.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.3.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "svelte": "^5.2.7",
-    "svelte-check": "^4.0.9",
-    "tailwindcss": "4.0.0-beta.1",
+    "eslint": "^9.19.0",
+    "eslint-plugin-svelte": "^2.46.1",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "svelte": "^5.19.6",
+    "svelte-check": "^4.1.4",
+    "tailwindcss": "4.0.3",
     "tailwindcss-spring": "^1.0.1",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "vite": "5.4.11",
-    "wrangler": "^3.89.0"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0",
+    "vite": "6.0.11",
+    "wrangler": "^3.107.2"
   },
   "packageManager": "pnpm@9.14.2"
 }
