--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
   "name": "@blankparticle/www",
-  "version": "0.0.1",
   "type": "module",
+  "private": true,
   "scripts": {
+    "postinstall": "wrangler types",
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "pnpm run build && wrangler pages dev",
+    "preview": "pnpm run build && wrangler dev",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "deploy": "pnpm run build && wrangler pages deploy",
-    "typegen": "wrangler types && mv worker-configuration.d.ts src/",
+    "deploy": "pnpm run build && wrangler deploy",
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250129.0",
-    "@fontsource-variable/jetbrains-mono": "^5.1.2",
-    "@sveltejs/adapter-cloudflare": "^5.0.1",
-    "@sveltejs/kit": "^2.16.1",
+    "@fontsource-variable/jetbrains-mono": "^5.2.5",
+    "@sveltejs/adapter-cloudflare": "^7.0.1",
+    "@sveltejs/kit": "^2.20.4",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "4.0.3",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.19.0",
-    "eslint-plugin-svelte": "^2.46.1",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
+    "@tailwindcss/vite": "4.1.3",
+    "@types/node": "^22.14.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.24.0",
+    "eslint-plugin-svelte": "^3.5.1",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.19.6",
-    "svelte-check": "^4.1.4",
-    "tailwindcss": "4.0.3",
+    "svelte": "^5.25.8",
+    "svelte-check": "^4.1.5",
+    "tailwindcss": "4.1.3",
     "tailwindcss-spring": "^1.0.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0",
-    "vite": "6.0.11",
-    "wrangler": "^3.107.2"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1",
+    "vite": "6.2.5",
+    "wrangler": "^4.9.0"
   },
-  "packageManager": "pnpm@9.14.2"
+  "packageManager": "pnpm@10.7.1"
 }
