--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
+    "lib": ["ESNext", "DOM"],
     "allowJs": true,
     "checkJs": true,
     "esModuleInterop": true,
@@ -10,7 +11,7 @@
     "sourceMap": true,
     "strict": true,
     "moduleResolution": "bundler",
-    "verbatimModuleSyntax": true,
-    "types": ["@cloudflare/workers-types"]
-  }
+    "verbatimModuleSyntax": true
+  },
+  "include": ["worker-configuration.d.ts", "src/**/*.ts"]
 }
