--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "wrangler types",
-    "dev": "vite dev",
+    "dev": "vite dev --host",
     "build": "vite build",
     "preview": "pnpm run build && wrangler dev",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -14,27 +14,27 @@
     "lint": "prettier --check . && eslint ."
   },
   "devDependencies": {
-    "@fontsource-variable/jetbrains-mono": "^5.2.6",
-    "@sveltejs/adapter-cloudflare": "^7.0.4",
-    "@sveltejs/kit": "^2.22.2",
-    "@sveltejs/vite-plugin-svelte": "^5.1.0",
-    "@tailwindcss/vite": "4.1.11",
-    "@types/node": "^24.0.10",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.30.1",
-    "eslint-plugin-svelte": "^3.10.1",
-    "globals": "^16.3.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "svelte": "^5.35.2",
-    "svelte-check": "^4.2.2",
-    "tailwindcss": "4.1.11",
+    "@fontsource-variable/jetbrains-mono": "^5.2.8",
+    "@sveltejs/adapter-cloudflare": "^7.2.6",
+    "@sveltejs/kit": "^2.50.1",
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "@tailwindcss/vite": "4.1.18",
+    "@types/node": "^25.2.0",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^9.39.2",
+    "eslint-plugin-svelte": "^3.14.0",
+    "globals": "^17.3.0",
+    "prettier": "^3.8.1",
+    "prettier-plugin-svelte": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "svelte": "^5.49.1",
+    "svelte-check": "^4.3.6",
+    "tailwindcss": "4.1.18",
     "tailwindcss-spring": "^1.0.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "7.0.2",
-    "wrangler": "^4.23.0"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
+    "vite": "7.3.1",
+    "wrangler": "^4.61.1"
   },
   "packageManager": "pnpm@10.8.0"
 }
