--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/kit": "^2.50.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/vite": "4.1.18",
+    "@takumi-rs/image-response": "^0.66.13",
     "@types/node": "^25.2.0",
     "autoprefixer": "^10.4.24",
     "eslint": "^9.39.2",
@@ -29,6 +30,7 @@
     "prettier": "^3.8.1",
     "prettier-plugin-svelte": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "react": "^19.2.4",
     "svelte": "^5.49.1",
     "svelte-check": "^4.3.6",
     "tailwindcss": "4.1.18",
